--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
                 {{#each burgers}}
                 {{#unless devoured}}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                    {{id}}. {{burger_name}}
+                    {{id}}. {{name}}
                     <button class="change-devour btn btn-outline-secondary" data-id={{id}}>Devour It!</button>
                 </li>
                 {{/unless}}
@@ -23,7 +23,7 @@
                 {{#each burgers}}
                 {{#if devoured}}
                 <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-light">
-                    {{id}}. {{burger_name}}
+                    {{id}}. {{name}}
                 </li>
                 {{/if}}
                 {{/each}}
