--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
         <h1 class="text-center">Eat Da Burger!</h1>
     </div>
     <div class="row my-4">
-        <div class="col-md">
+        <div class="col-md-8">
             <ul class="list-group list-group-flush justify-content-md-center">
                 {{#each burgers}}
                 {{#unless devoured}}
@@ -14,13 +14,13 @@
                     {{id}}. {{name}}
                     <select>
                         {{#each customers}}
-                        <option>
+                        <option data-id={{id}}>
                             {{name}}
                         </option>
                         {{/each}}
                     </select>
                     <button class="change-devour btn btn-outline-secondary" data-id={{id}}>Devour It!</button>
-                    Eaten by {{name}}
+                    Eaten by 
                 </li>
                 {{/unless}}
                 {{/each}}
@@ -35,7 +35,7 @@
                         <label class="form-label">Enter the quantity of the burger you have and click the "Submit" button</label>
                         <input type="text" class="form-control" id="text-quantity" name="quantity">
                     </div>
-                    <button type="submit" class="btn btn-primary" id="btn-submit">Submit</button>
+                    <button type="submit" class="btn btn-primary" id="btn-submit">Add</button>
                 </form>
             </div>
         </div>
@@ -50,8 +50,25 @@
                 {{/each}}
             </ul>
         </div-->
-        <div>
-
+        <div class="col-md-4">
+            <button class="btn btn-primary">Click to place your order</button>
+            <form class="create-form">
+                <div class="form-group">
+                    <label class="form-label">Enter your name</label>
+                    <input type="text" class="form-control" id="text-customer" name="name">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Select the burger you want to eat</label>
+                    <select class="custom-select" id="select-burger">
+                        {{#each availableBurgers}}
+                        <option value={{id}}>
+                            {{name}}
+                        </option>
+                        {{/each}}
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary" id="btn-submitOrder">Submit</button>
+            </form>
         </div>
     </div>
 
