--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,20 +9,20 @@
         <div class="col-md-8">
             <ul class="list-group list-group-flush justify-content-md-center">
                 {{#each burgers}}
-                {{#unless devoured}}
+           
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     {{id}}. {{name}}
-                    <select>
+                    <select class="custom-select" style="height: 100px">
                         {{#each customers}}
-                        <option data-id={{id}}>
-                            {{name}}
+                        <option value={{cusmtomerId}}>
+                            {{customerName}}
                         </option>
                         {{/each}}
                     </select>
                     <button class="change-devour btn btn-outline-secondary" data-id={{id}}>Devour It!</button>
-                    Eaten by 
+                    Eaten by {{servedCustomers}}
                 </li>
-                {{/unless}}
+              
                 {{/each}}
             </ul>
             <div class="my-4 d-flex justify-content-center">
