--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
            
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     {{id}}. {{name}}
-                    <select class="custom-select" style="height: 100px">
+                    <select class="custom-select" style="width: 150px">
                         {{#each customers}}
                         <option value={{cusmtomerId}}>
                             {{customerName}}
