--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row justify-content-md-center">
-        <img class="w-75 h-75" src="/assets/img/burger.jpeg">
+        <img src="/assets/img/burger.jpeg">
     </div>
     <div class="row justify-content-md-center">
         <h1 class="text-center">Eat Da Burger!</h1>
